bootstrap_flexbox/bootstrap_fb_106/app.css
html {
    /* temporary fix for overflow content */
    overflow-x: hidden;
}

body {
    background: #f5d9d5;
    font-family: "Nunito", san-serif;
    /* width: 100%;
    height: 100%;
    margin: 0; */
}

.blurb h2 {
    color: #EA1C2C;
    font-weight: 100;
    font-size: 2.5rem;
}

.blurb p {
    color: #F498b8;
    font-weight: 100;
    font-size: 1.125rem; 
    line-height: 2;
}

.content {
    margin-top: 100px;
}

#mainNavbar {
    font-size: 1.5rem;
    font-weight: 100;
}


#mainNavbar .nav-link {
    color: white;
}

#mainNavbar .nav-link:hover {
    color: #EA1C2C;
}

#mainNavbar .navbar-brand {
    color: #EA1C2C;
}

#headingGroup span {
    color: red;
}

#headingGroup h1 {
    font-weight: 100;
    font-size: 4rem;
}

@media (max-width: 1200px){
    #headingGroup h1 {
        font-weight: 100;
        font-size: 3rem;
    }
}

